@@ -28,7 +28,7 @@ _chemical_name_systematic
 ;
 _space_group_IT_number           2
 _symmetry_cell_setting           triclinic
-_symmetry_space_group_name_Hall  '-P 1 (-1/2*x+1/2*z,-y,1/2*x+1/2*z)'
+_symmetry_space_group_name_Hall  '-B 1'
 _symmetry_space_group_name_H-M   'B -1'
 _audit_creation_method
 ;
