@@ -18,7 +18,7 @@ _journal_year                    1977
 _chemical_formula_sum            '(Ca.822 Fe.178) Si O3'
 _chemical_name_mineral           Ferrobustamite
 _space_group_IT_number           2
-_symmetry_space_group_name_Hall  '-P 1 (-x,-1/2*y+1/2*z,1/2*y+1/2*z)'
+_symmetry_space_group_name_Hall  '-A 1'
 _symmetry_space_group_name_H-M   'A -1'
 _cell_angle_alpha                89.44
 _cell_angle_beta                 95.28
