@@ -16,12 +16,12 @@ centering: 0,0,0 0.5,0.5,0
 {
    "constraints" => "1",
    "crystal_class" => "triclinic",
-   "hall" => "-P 1 (1/2*x+1/2*y,1/2*x-1/2*y,-z)",
+   "hall" => "-C 1",
    "hermann_mauguin" => "C -1",
    "ncsym" => [ "x,y,z", "-x,-y,-z" ],
    "number" => "2",
    "schoenflies" => "Ci^1",
-   "symops" => [ "x,y,z", "x+1/2,y+1/2,z", "-x,-y,-z", "-x+1/2,-y+1/2,-z" ],
+   "symops" => [ "x,y,z", "-x,-y,-z", "x+1/2,y+1/2,z", "-x+1/2,-y+1/2,-z" ],
    "universal_h_m" => "C -1",
 },
 #-------------------------
