@@ -6,6 +6,11 @@ cod-tools (unreleased)
         the execution of checks related to powder diffraction blocks.
     - COD::CIF::Data:
       - the get_formula_units_z() subroutine.
+    - COD::Spacegroups::Lookup::COD:
+      - the 'F d 1 1' space group description;
+      - the 'F 1 d 1' space group description;
+      - the 'F 1 1 d' space group description;
+      - the 'C 1 c 1 (a-3/8,b-3/8,a+2*c)' space group description.
   * Changed:
     - cif_cod_check:
       - modifying the warning message about missing authors to use the same
